feature: Bitacora de semana uno completa