@@ -1,7 +1,6 @@
 package dosw.bitacora.Semana1.Streams;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class StreamsEjercicio1 {
     public List<Integer> paresMayoresDeDiez() {
@@ -11,6 +10,6 @@ public class StreamsEjercicio1 {
         return numeros.stream()
                 .filter(num -> num > 10)
                 .filter(num -> num % 2 == 0)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
